# armour

./: .gitignore  LICENSE  README.md  pDB.md  pyproject.toml  setup.cfg  tox.ini
armour/: __init__.py  crypt.py
armour/pdb/: __init__.py  entries.py  exc.py  header.py  s.py
doc/: README.md  pDB-1.md
doc/d/: SNAPI-0.md  SNAPI-1.md  _DRAFT_pDB-1.md  armour.md  crypto.md  custom-entries.md  entries.md  entry.md  exceptions.md  hashing.md  header.md  keyfile-0.md  keyfile-1.md  pDB-0.md  pDB-1.md  pw-gen.md  pw-info.md  randomness.md  types.md
libarmour/: .gitignore  Makefile  README.md
libarmour/armour/: argon2.c  argon2.h  endian.c  endian.h  null.h  perror.c  perror.h  sha.c  sha.h
libarmour/armour/v0/kf/: header.c  header.h  kf.c  kf.h
libarmour/armour/v0/snapi/: snapi.c  snapi.h
libarmour/armour/v1/pdb/: argon2.c  error.h  header.c  header.h  pdb.c  pdb.h  sha.h
libarmour/scripts/: pdbv1_header.py
libarmour/src/v1/pdb/: argon2.h  error.c  pdb.c  sha.c
libarmour/tests/: main.h
libarmour/tests/v0/header-failing/: f:test.pkf  pretest.py  test:header-parser.c
libarmour/tests/v0/header-passing/: f:test.pkf
libarmour/tests/v0/kf/header-passing/: test:header-parser.c
libarmour/tests/v1/pdb/header/: pretest.py  test:header-parser.c
libarmour/tests/v1/pdb/header-failing/: test:header-parser.c
libarmour/tests/v1/pdb/header-passing/: pretest.py  test:header-parser.c
scripts/: application-pdb.xml  docindex.sh  gen_magic.py  git.sh  tests.sh
tests/: proof.py  test_gen.py  test_pdb.py  test_proof.py
