[metadata]
name = armour
version = attr: armour.__version__
author = Ari Archer
author_email = ari.web.xyz@gmail.com
url = https://ari-web.xyz/gh/armour
description = password securing, management and generation tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = password, pwd, zstd, cryptography, crypto, hash, hashing, sha, blake, struct, md, sha3, sha2, sha1, rc4, binary, password generator, password manager, password info
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    cryptography
    zstd
    password-strength
    zxcvbn

[options.package_data]
* = *.typed

[bdist_wheel]
universal = 1
